--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -48,6 +48,7 @@
     "auto_redirect": true,
     "strict_route": true,
     "stack": "system",
+    "sniff": true,
     "platform": {
       "http_proxy": {
         "enabled": true,
@@ -60,6 +61,7 @@
     "type": "mixed",
     "listen": "0.0.0.0",
     "listen_port": 2080,
+    "sniff": true,
     "users": []
   }
 ],
