--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -48,6 +48,7 @@
     "auto_redirect": true,
     "strict_route": true,
     "stack": "system",
+    "sniff": true,
     "platform": {
       "http_proxy": {
         "enabled": true,
@@ -60,6 +61,7 @@
     "type": "mixed",
     "listen": "0.0.0.0",
     "listen_port": 2080,
+    "sniff": true,
     "users": []
   }
 ],
@@ -85,15 +87,15 @@
     { "tag": "🔯 香港自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["网站|地址|剩余|过期|时间|有效"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "GLOBAL", "type": "selector", "outbounds": ["{all}"]},
-    { "tag": "🎯 全球直连", "type": "direct" }
+    { "tag": "🎯 全球直连", "type": "direct" },
+    { "tag": "dns-out", "type": "dns" }
   ],
   
   "route": {
     "auto_detect_interface": true,
     "final": "🐠 漏网之鱼",
     "rules": [
-      {"action": "sniff"},
-      {"protocol": "dns", "action": "hijack-dns"},
+      { "type": "logical", "mode": "or", "rules": [{ "port": 53 }, { "protocol": "dns" }], "outbound": "dns-out" },
       { "clash_mode": "direct", "outbound": "🎯 全球直连" },
       { "clash_mode": "global", "outbound": "GLOBAL" },
       { "domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连" },
