--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -84,7 +84,7 @@
       "sniff": true
     },
     {
-      "type": "http",
+      "type": "mixed",
       "listen": "0.0.0.0",
       "listen_port": 2080,
       "sniff": true,
