--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -23,7 +23,7 @@
     "servers": [
       {
         "tag": "proxyDns",
-        "address": "https://dns.google/dns-query",
+        "address": "8.8.8.8",
         "address_resolver": "defaultDns",
         "address_strategy": "ipv4_only",
         "detour": "🚀 节点选择"
@@ -81,6 +81,7 @@
       "auto_redirect": true,
       "strict_route": true,
       "stack": "system",
+      "sniff": true,
       "platform": {
         "http_proxy": {
           "enabled": true,
@@ -93,6 +94,7 @@
       "type": "http",
       "listen": "0.0.0.0",
       "listen_port": 2080,
+      "sniff": true,
       "users": []
     }
   ],
