--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -91,7 +91,7 @@
       }
     },
     {
-      "type": "http",
+      "type": "mixed",
       "listen": "0.0.0.0",
       "listen_port": 2080,
       "sniff": true,
