--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -38,7 +38,7 @@
      {"query_type": ["A", "AAAA"], "server": "fakeip"}
    ],
    "fakeip": {
-      "enable": true,
+      "enabled": true,
       "inet4_range": "198.18.0.0/15",
       "inet6_range": "fc00::/18"
     },
