--- a/config_template/config_tp_proxy.json
+++ b/config_template/config_tp_proxy.json
@@ -93,7 +93,7 @@
       { "tag": "geosite-cn", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/cn.srs", "download_detour": "➡️ 直连" },
       { "tag": "geosite-private", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/private.srs", "download_detour": "➡️ 直连" },
            
-      { "tag": "geosite-direct", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/chg1f/sing-geosite-mixed/rule-set/direct.srs", "download_detour": "➡️ 直连" }
+      { "tag": "geosite-direct", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/chg1f/sing-geosite-mixed/rule-set/direct.srs", "download_detour": "➡️ 直连" },
       { "tag": "geoip-google", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/google.srs", "download_detour": "➡️ 直连" },
       { "tag": "geoip-telegram", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/telegram.srs", "download_detour": "➡️ 直连" },     
       { "tag": "geoip-netflix", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/netflix.srs", "download_detour": "➡️ 直连" },     
