--- a/config_template/config_tp_proxy.json
+++ b/config_template/config_tp_proxy.json
@@ -115,21 +115,7 @@
       "type": "tproxy",
       "tag": "tproxy-in",
       "listen": "0.0.0.0",
-      "listen_port": 2080,
-      "platform": {
-         "http_proxy": {
-           "enabled": true,
-           "server": "127.0.0.1",
-           "server_port": 2080
-         }
-       }
-    },
-    {
-      "type": "mixed",
-      "listen": "0.0.0.0",
-      "listen_port": 2080,
-      "sniff": true,
-      "users": []
+      "listen_port": 2080
     }
   ],
   "experimental": {
