--- a/config_template/config_tp_proxy.json
+++ b/config_template/config_tp_proxy.json
@@ -116,6 +116,13 @@
       "tag": "tproxy-in",
       "listen": "0.0.0.0",
       "listen_port": 7895
+    },
+    {
+      "type": "mixed",
+      "listen": "0.0.0.0",
+      "listen_port": 7895,
+      "sniff": true,
+      "users": []
     }
   ],
   "experimental": {
