--- a/config_template/config_tp_proxy.json
+++ b/config_template/config_tp_proxy.json
@@ -115,14 +115,8 @@
       "type": "tproxy",
       "tag": "tproxy-in",
       "listen": "0.0.0.0",
-      "listen_port": 7895
-    },
-    {
-      "type": "mixed",
-      "listen": "0.0.0.0",
       "listen_port": 7895,
-      "sniff": true,
-      "users": []
+      "tcp_fast_open": true
     }
   ],
   "experimental": {
