--- a/config_template/config_tp_proxy.json
+++ b/config_template/config_tp_proxy.json
@@ -114,7 +114,14 @@
       "type": "tproxy",
       "tag": "tproxy-in",
       "listen": "0.0.0.0",
-      "listen_port": 7895
+      "listen_port": 7895,
+      "tcp_fast_open": true
+    },
+    {
+      "type": "http",
+      "tag": "http-in",
+      "listen": "0.0.0.0",
+      "listen_port": 2080
     }
   ],
   "experimental": {
